Updated About Section
moo

--- a/GoldenEagleOrganics/about.html
+++ b/GoldenEagleOrganics/about.html
@@ -95,52 +95,44 @@
         <h2 style="text-align: center; color: #404040">Meet the GEO Team!</h2>
         <hr />
         <div class="col-md-6 text-center" style="margin-top: 15px">
-            <img src="GEOPics/brian01.png" />
+            <img src="GEOPics/brian01.png" width="250" />
             <h2>Brian Lepore</h2>
-            <p>
-                Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
-            </p>
         </div>
         <div class="col-md-6 text-center" style="margin-top: 15px">
-            <img src="GEOPics/emily01.png" />
+            <img src="GEOPics/emily01.png" width="250" />
             <h2>Emily Lepore</h2>
-            <p>
-                Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
-            </p>
         </div>
         <div class="col-md-6 text-center" style="margin-top: 15px">
-            <img src="GEOPics/gus01.png" />
+            <img src="GEOPics/guy01.png" width="250" />
+            <h2>Vincent Lepore</h2>
+        </div>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/profile_blank.png" width="250" />
+            <h2>Nick Covey</h2>
+        </div>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/profile_blank.png" width="250" />
+            <h2>Justin Dunham</h2>
+        </div>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/profile_blank.png" width="250" />
+            <h2>Brian Adams</h2>
+        </div>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/profile_blank.png" width="250" />
+            <h2>Ryan Moore</h2>
+        </div>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/gus01.png" width="250" />
             <h2>Gus Lepore</h2>
-            <p>
-                Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
-            </p>
         </div>
         <div class="col-md-6 text-center" style="margin-top: 15px">
-            <img src="GEOPics/claudia01.png" />
+            <img src="GEOPics/claudia01.png" width="250" />
             <h2>Claudia Lepore</h2>
-            <p>
-                Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
-            </p>
         </div>
         <div class="col-md-6 text-center" style="margin-top: 15px">
-            <img src="GEOPics/guy01.png" />
-            <h2>John Smith</h2>
-            <p>
-                Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
-            </p>
-        </div>
-        <div class="col-md-6 text-center" style="margin-top: 15px">
-            <img src="GEOPics/bodhi01.png" />
+            <img src="GEOPics/bodhi01.png" width="250" />
             <h2>Bodhi Lepore</h2>
-            <p>
-                Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
-            </p>
         </div>
     </div>
     <div class="text-center">
