Switched over to Bootstrap frame
moo

--- a/GoldenEagleOrganics/contact2.html
+++ b/GoldenEagleOrganics/contact2.html
@@ -13,6 +13,7 @@
     <link href="siteCss/BSOverride.css" rel="stylesheet">
     <link href="siteCss/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="siteCss/Hover/hover-min.css" rel="stylesheet">
+    <link href="siteCss/icons.less" rel="stylesheet">
     <link rel="icon" href="GEOPics/GEOItab.ico">
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -37,6 +38,7 @@
                     </p>
                     <a href="http://www.usda.gov/wps/portal/usda/usdahome?contentidonly=true&contentid=organic-agriculture.html"><img src="GEOPics/usdaorg.png" height="80" class="hvr-pop" style="float: right; padding: 15px 20px 0 10px" /></a>
                     <a href="https://tilth.org/"><img src="GEOPics/oretil.png" height="80" class="hvr-pop" style="float: right; padding: 15px 10px 0 0px" /></a>
+
                     <h2 style="font-weight: 700">GOLDEN EAGLE</h2>
                     <h2 style="font-weight: 700; margin-top: 0">ORGANICS, INC.</h2>
                     <h4 style="margin-top: 0"><em>"Central Oregon hay and organic pasture raised meats"</em></h4>
@@ -50,7 +52,7 @@
                 <div class="container-fluid">
                     <ul class="nav navbar-nav navbar-style">
                         <li class="hvr-wobble-horizontal"><a href="index.html">Home</a></li>
-                        <li class="active hvr-wobble-horizontal dropdown">
+                        <li class="hvr-wobble-horizontal dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="">
                                 Products
                                 <span class="caret"></span>
@@ -65,67 +67,36 @@
                             </ul>
                         </li>
                         <li class="hvr-wobble-horizontal"><a href="about.html">About</a></li>
-                        <li class="hvr-wobble-horizontal"><a href="contact.html">Contact</a></li>
+                        <li class="active hvr-wobble-horizontal"><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
         </div>
     </div>
     <div class="container" style="padding: 190px 0 0 0 !important">
-        <div class="col-md-8" style="margin-top: 15px; padding: 0 15px 0 0 !important">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators" style="z-index: 1">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-                </ol>
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa01.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa02.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa03.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa04.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa05.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                </div>
-                <!-- Controls -->
-                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <!--<span class="glyphicon glyphicon-chevron-left"></span>-->
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                    <!--<span class="glyphicon glyphicon-chevron-right"></span>-->
-                </a>
-            </div>
-        </div>
-        <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
-            <h3 style="margin-top: 10px">GEO's Alfalfa</h3>
-            <p>
-                Short alfalfa description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
-            </p>
-            <h3>What We Do</h3>
-            <p>
-                Short alfalfa description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
-            </p>
-            <br />
-            <p>Interested in buying from GEO? Click the button below to contact us!</p>
-            <a href="contact.html" style="color: white" class="btn btn-sm btn-warning">Contact GEO</a></a>
+        <div class="col-md-12" style="margin-top: 15px; padding: 0 !important">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1427.845649891845!2d-121.25090347618487!3d44.08428614295538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54b8cf644ffd41df%3A0x121ec864a946e420!2s62900+Eagle+Rd%2C+Bend%2C+OR+97701!5e1!3m2!1sen!2sus!4v1467073674783" width="600" height="450" frameborder="0" style="border:0; float: left; margin-right: 15px" allowfullscreen></iframe>
+            <h1 style="text-decoration: underline; margin-top: 0">Contact Information:</h1>
+            <h2 style="color: #B88D47">Brian & Emily Lepore</h2>
+            <h3 style="text-decoration: underline; color: #B88D47">Address:</h3>
+            <h4>
+                62900 Eagle Rd. <br />
+                Bend, OR 97701<br />
+            </h4>
+            <h3 style="text-decoration: underline; color: #B88D47">
+                Email:
+            </h3>
+            <h4 class="black-links"><a href="mailto:brian@goldeneagleorganics.com">brian@goldeneagleorganics.com</a></h4>
+            <h3 style="text-decoration: underline; color: #B88D47">Cell:</h3>
+            <h4>(541)-214-5467</h4>
+            <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/fblogo.jpg" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
+            <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/emailLogo.jpg" width="50" style="padding: 5px" title="Email GEO" /></a>
         </div>
     </div>
-    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 250px">
+    <div class="text-center">
+        <p style="margin-top: 100px">Website designed & built by <a href="https://www.linkedin.com/in/devin-magee-3698ba70">Devin Magee</a></p>
+    </div>
+    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 100px">
         <a href="index.html">
             <img src="GEOPics/GEOCrest.png" width="80" style="padding-top: 10px" />
         </a>
