--- a/GoldenEagleOrganics/index2.html
+++ b/GoldenEagleOrganics/index2.html
@@ -49,8 +49,8 @@
             <nav class="navbar">
                 <div class="container-fluid">
                     <ul class="nav navbar-nav navbar-style">
-                        <li class="hvr-wobble-horizontal"><a href="index.html">Home</a></li>
-                        <li class="active hvr-wobble-horizontal dropdown">
+                        <li class="active hvr-wobble-horizontal"><a href="index.html">Home</a></li>
+                        <li class="hvr-wobble-horizontal dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="">
                                 Products
                                 <span class="caret"></span>
@@ -85,19 +85,19 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa01.jpg" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/geo01.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa02.jpg" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/geo02.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa03.jpg" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/geo03.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa04.jpg" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/geo04.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa05.jpg" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/geo05.jpg" style="width: 100%" title="" alt="">
                     </div>
                 </div>
                 <!-- Controls -->
@@ -110,19 +110,70 @@
             </div>
         </div>
         <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
-            <h3 style="margin-top: 10px">GEO's Alfalfa</h3>
+            <a href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/placeholder.png" width="100%" /></a>
+            <h3 class="black-links"><a href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel">Blog Title Here</a></h3>
             <p>
-                Short alfalfa description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
+                Short blog description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
             </p>
-            <h3>What We Do</h3>
             <p>
-                Short alfalfa description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
+                Short blog description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
             </p>
-            <br />
-            <p>Interested in buying from GEO? Click the button below to contact us!</p>
-            <a href="contact.html" style="color: white" class="btn btn-sm btn-warning">Contact GEO</a></a>
+            <a href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel" style="color: white" class="btn btn-sm btn-warning">Read More</a></a>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12" style="margin-top: 15px; padding: 0; border-top: 1px solid #B88D47">
+            <h2 style="text-align:center; color: #404040; font-family: 'Times New Roman'">- Products & Services GEO Offers -</h2>
+            <div class="col-md-4">
+                <div class="product-overlay">
+                    <a href="beef.html">
+                        <img src="GEOPics/beef01.jpg" width="100%" />
+                        <h2 class="hvr-bob">- Beef -</h2>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="product-overlay">
+                    <a href="lamb.html">
+                        <img src="GEOPics/lamb01.jpg" width="100%" />
+                        <h2 class="hvr-bob">- Lamb -</h2>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="product-overlay">
+                    <a href="goat.html">
+                        <img src="GEOPics/goat01.jpg" width="100%" />
+                        <h2 class="hvr-bob">- Goat (Chevon) -</h2>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12" style="margin-top: 15px; padding: 15px 0 0 0">
+            <div class="col-md-6">
+                <div class="product-overlay">
+                    <a href="hay.html">
+                        <img src="GEOPics/hay01.jpg" width="100%" />
+                        <h2 class="hvr-bob">- Hay -</h2>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="product-overlay">
+                    <a href="alfalfa.html">
+                        <img src="GEOPics/alfalfa01.jpg" width="100%" />
+                        <h2 class="hvr-bob">- Alfalfa -</h2>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12" style="margin-top: 15px; padding: 15px 15px 0 15px">
+            <div class="product-overlay">
+                <a href="farming.html">
+                    <img src="GEOPics/custFarmServ01.jpg" width="100%" />
+                    <h2 class="hvr-bob">- Custom Farming Services -</h2>
+                </a>
+            </div>
         </div>
     </div>
     <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 250px">
