--- a/GoldenEagleOrganics/about2.html
+++ b/GoldenEagleOrganics/about2.html
@@ -37,6 +37,7 @@
                     </p>
                     <a href="http://www.usda.gov/wps/portal/usda/usdahome?contentidonly=true&contentid=organic-agriculture.html"><img src="GEOPics/usdaorg.png" height="80" class="hvr-pop" style="float: right; padding: 15px 20px 0 10px" /></a>
                     <a href="https://tilth.org/"><img src="GEOPics/oretil.png" height="80" class="hvr-pop" style="float: right; padding: 15px 10px 0 0px" /></a>
+
                     <h2 style="font-weight: 700">GOLDEN EAGLE</h2>
                     <h2 style="font-weight: 700; margin-top: 0">ORGANICS, INC.</h2>
                     <h4 style="margin-top: 0"><em>"Central Oregon hay and organic pasture raised meats"</em></h4>
@@ -50,7 +51,7 @@
                 <div class="container-fluid">
                     <ul class="nav navbar-nav navbar-style">
                         <li class="hvr-wobble-horizontal"><a href="index.html">Home</a></li>
-                        <li class="active hvr-wobble-horizontal dropdown">
+                        <li class="hvr-wobble-horizontal dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="">
                                 Products
                                 <span class="caret"></span>
@@ -64,7 +65,7 @@
                                 <li><a href="farming.html">Custom Farming</a></li>
                             </ul>
                         </li>
-                        <li class="hvr-wobble-horizontal"><a href="about.html">About</a></li>
+                        <li class="active hvr-wobble-horizontal"><a href="about.html">About</a></li>
                         <li class="hvr-wobble-horizontal"><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -72,64 +73,75 @@
         </div>
     </div>
     <div class="container" style="padding: 190px 0 0 0 !important">
-        <div class="col-md-8" style="margin-top: 15px; padding: 0 15px 0 0 !important">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators" style="z-index: 1">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-                </ol>
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa01.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa02.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa03.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa04.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa05.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                </div>
-                <!-- Controls -->
-                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <!--<span class="glyphicon glyphicon-chevron-left"></span>-->
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                    <!--<span class="glyphicon glyphicon-chevron-right"></span>-->
-                </a>
+        <div class="row">
+            <div class="col-md-12" style="margin-top: 15px; text-align: center; background-color: #B88D47; color: white">
+                <img src="GEOPics/owners01.jpg" width="500" style="margin-top: 15px" />
+                <h2 style="color: #404040">- About The Owners Of GEO -</h2>
+                <p>
+                    The Lepore Family (Brian, Emily, Gus, Claudia and Bodhi the dog) migrated to Central Oregon from East-Central Indiana in 2012.
+                    Brian spent the previous decade researching and teaching agricultural and environmental soil sciences and agroecology.  During
+                    that time, he worked with many farmers in their fields and fell in love with farming. But, academia and farming, done right, are
+                    both jobs that require total focus.  So, in 2012, Brian quit his job at Ball State University with the hope of starting a farm.
+                    Emily found a job as a speech and language pathologist at St. Charles Hospital in Bend and Brian started looking for land to farm.
+                    In 2014, they found two properties: a somewhat neglected 77-acre hay farm about 25 miles north of Bend right on Highway 97 and
+                    a house with a few acres of pasture just outside Bend.  The Lepores live in the Bend house and commute to the Culver property
+                    (so that Emily can get to her hospital job) and get help on the farm and with kid duties from Brian’s family (Vince (“Grand Pops”),
+                    Gisela (“Omi”) and Bruce, Yuki and Louie (Brian’s brother’s family)) who followed them to Central Oregon.  With Brian’s family all
+                    here (they’re not “all there”) and much of Emily’s family on the west coast, Central Oregon was the perfect place to start their
+                    new farming adventure.
+                </p>
             </div>
         </div>
-        <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
-            <h3 style="margin-top: 10px">GEO's Alfalfa</h3>
-            <p>
-                Short alfalfa description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
-            </p>
-            <h3>What We Do</h3>
-            <p>
-                Short alfalfa description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
-            </p>
-            <br />
-            <p>Interested in buying from GEO? Click the button below to contact us!</p>
-            <a href="contact.html" style="color: white" class="btn btn-sm btn-warning">Contact GEO</a></a>
+        <h2 style="text-align: center; color: #404040">Meet the GEO Team!</h2>
+        <hr />
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/brian01.png" width="250" />
+            <h2>Brian Lepore</h2>
+        </div>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/emily01.png" width="250" />
+            <h2>Emily Lepore</h2>
+        </div>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/guy01.png" width="250" />
+            <h2>Vince Lepore</h2>
+        </div>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/profile_blank.png" width="250" />
+            <h2>Nick Covey</h2>
+        </div>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/profile_blank.png" width="250" />
+            <h2>Justin Dunham</h2>
+        </div>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/profile_blank.png" width="250" />
+            <h2>Brian Adams</h2>
+        </div>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/profile_blank.png" width="250" />
+            <h2>Ryan Moore</h2>
+        </div>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/gus01.png" width="250" />
+            <h2>Gus Lepore</h2>
+        </div>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/claudia01.png" width="250" />
+            <h2>Claudia Lepore</h2>
+        </div>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/bodhi01.png" width="250" />
+            <h2>Bodhi Lepore</h2>
         </div>
     </div>
-    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 250px">
+    <div class="text-center">
+        <p style="margin-top: 100px">Website designed & built by <a href="https://www.linkedin.com/in/devin-magee-3698ba70">Devin Magee</a></p>
+    </div>
+    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 100px">
         <a href="index.html">
             <img src="GEOPics/GEOCrest.png" width="80" style="padding-top: 10px" />
-        </a>
-        <h2 style="font-family:'Times New Roman', Times, serif; color: white; font-weight: 700; display: inline; vertical-align: middle; margin-left: 15px; margin-right: 25px">GOLDEN EAGLE ORGANICS, INC.</h2>
+        </a>        <h2 style="font-family:'Times New Roman', Times, serif; color: white; font-weight: 700; display: inline; vertical-align: middle; margin-left: 15px; margin-right: 25px">GOLDEN EAGLE ORGANICS, INC.</h2>
         <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/facebook-square.png" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
         <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/mail.png" width="50" style="padding: 5px" title="Email GEO" /></a>
     </footer>
