--- a/GoldenEagleOrganics/contact.html
+++ b/GoldenEagleOrganics/contact.html
@@ -1,108 +1,164 @@
-﻿<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Horse Care And Boarding">
-    <meta name="keywords" content="Golden, Eagle, Organics, Meats">
-    <meta name="author" content="Devin Magee">
-    <meta http-equiv="last-modified" content="2016-06-22@11:00:00 PST" />
-    <title>Golden Eagle Organics Inc.</title>
-    <link href="siteCss/bootstrap.min.css" rel="stylesheet">
-    <link href="siteCss/BSOverride.css" rel="stylesheet">
-    <link href="siteCss/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="siteCss/Hover/hover-min.css" rel="stylesheet">
-    <link href="siteCss/icons.less" rel="stylesheet">
-    <link rel="icon" href="GEOPics/GEOItab.ico">
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script>
-        $('.carousel').carousel({
-            interval: 5000
-        })
-    </script>
-</head>
-<body>
-    <div class="col-md-12" style="min-height:150px; background-color: #b88d47; position: fixed; z-index: 3">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12" style="font-family:'Times New Roman', Times, serif; color: white; padding-left: 0; padding-right: 0">
-                    <a href="index.html"><img src="GEOPics/GEOI.jpg" height="130" style="margin: 10px 20px 10px 0; float: left" /></a>
-                    <p style="display:inline; float: right; font-family: Tahoma; color: white; margin-top: 7px">
-                        62900 Eagle Rd. <br />
-                        Bend, OR 97701<br />
-                        (541)-214-5467<br />
-                        <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/facebook-square.png" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
-                        <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/mail.png" width="50" style="padding: 5px" title="Email GEO" /></a>
-                    </p>
-                    <a href="http://www.usda.gov/wps/portal/usda/usdahome?contentidonly=true&contentid=organic-agriculture.html"><img src="GEOPics/usdaorg.png" height="80" class="hvr-pop" style="float: right; padding: 15px 20px 0 10px" /></a>
-                    <a href="https://tilth.org/"><img src="GEOPics/oretil.png" height="80" class="hvr-pop" style="float: right; padding: 15px 10px 0 0px" /></a>
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-                    <h2 style="font-weight: 700">GOLDEN EAGLE</h2>
-                    <h2 style="font-weight: 700; margin-top: 0">ORGANICS, INC.</h2>
-                    <h4 style="margin-top: 0"><em>"Central Oregon hay and organic pasture raised meats"</em></h4>
+    <title>Contact - Business Casual - Start Bootstrap Theme</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/business-casual.css" rel="stylesheet">
+
+    <!-- Fonts -->
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body>
+
+    <div class="brand">Business Casual</div>
+    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+                <a class="navbar-brand" href="index.html">Business Casual</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="blog.html">Blog</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <div class="container">
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">Contact
+                        <strong>business casual</strong>
+                    </h2>
+                    <hr>
+                </div>
+                <div class="col-md-8">
+                    <!-- Embedded Google Map using an iframe - to select your location find it on Google maps and paste the link as the iframe src. If you want to use the Google Maps API instead then have at it! -->
+                    <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+                </div>
+                <div class="col-md-4">
+                    <p>Phone:
+                        <strong>123.456.7890</strong>
+                    </p>
+                    <p>Email:
+                        <strong><a href="mailto:name@example.com">name@example.com</a></strong>
+                    </p>
+                    <p>Address:
+                        <strong>3481 Melrose Place
+                            <br>Beverly Hills, CA 90210</strong>
+                    </p>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">Contact
+                        <strong>form</strong>
+                    </h2>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, vitae, distinctio, possimus repudiandae cupiditate ipsum excepturi dicta neque eaque voluptates tempora veniam esse earum sapiente optio deleniti consequuntur eos voluptatem.</p>
+                    <form role="form">
+                        <div class="row">
+                            <div class="form-group col-lg-4">
+                                <label>Name</label>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div class="form-group col-lg-4">
+                                <label>Email Address</label>
+                                <input type="email" class="form-control">
+                            </div>
+                            <div class="form-group col-lg-4">
+                                <label>Phone Number</label>
+                                <input type="tel" class="form-control">
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="form-group col-lg-12">
+                                <label>Message</label>
+                                <textarea class="form-control" rows="6"></textarea>
+                            </div>
+                            <div class="form-group col-lg-12">
+                                <input type="hidden" name="save" value="contact">
+                                <button type="submit" class="btn btn-default">Submit</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
+
     </div>
-    <div class="col-md-12" style="background-color: #b88d47; position: fixed; padding-top: 150px; z-index: 2">
+    <!-- /.container -->
+
+    <footer>
         <div class="container">
-            <nav class="navbar">
-                <div class="container-fluid">
-                    <ul class="nav navbar-nav navbar-style">
-                        <li class="hvr-wobble-horizontal"><a href="index.html">Home</a></li>
-                        <li class="hvr-wobble-horizontal dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="">
-                                Products
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu" style="text-align:center">
-                                <li><a href="beef.html">Beef</a></li>
-                                <li><a href="lamb.html">Lamb</a></li>
-                                <li><a href="goat.html">Goat</a></li>
-                                <li><a href="hay.html">Hay</a></li>
-                                <li><a href="alfalfa.html">Alfalfa</a></li>
-                                <li><a href="farming.html">Custom Farming</a></li>
-                            </ul>
-                        </li>
-                        <li class="hvr-wobble-horizontal"><a href="about.html">About</a></li>
-                        <li class="active hvr-wobble-horizontal"><a href="contact.html">Contact</a></li>
-                    </ul>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p>Copyright &copy; Your Website 2014</p>
                 </div>
-            </nav>
+            </div>
         </div>
-    </div>
-    <div class="container" style="padding: 190px 0 0 0 !important">
-        <div class="col-md-12" style="margin-top: 15px; padding: 0 !important">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1427.845649891845!2d-121.25090347618487!3d44.08428614295538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54b8cf644ffd41df%3A0x121ec864a946e420!2s62900+Eagle+Rd%2C+Bend%2C+OR+97701!5e1!3m2!1sen!2sus!4v1467073674783" width="600" height="450" frameborder="0" style="border:0; float: left; margin-right: 15px" allowfullscreen></iframe>
-            <h1 style="text-decoration: underline; margin-top: 0">Contact Information:</h1>
-            <h2 style="color: #B88D47">Brian & Emily Lepore</h2>
-            <h3 style="text-decoration: underline; color: #B88D47">Address:</h3>
-            <h4>
-                62900 Eagle Rd. <br />
-                Bend, OR 97701<br />
-            </h4>
-            <h3 style="text-decoration: underline; color: #B88D47">
-                Email:
-            </h3>
-            <h4 class="black-links"><a href="mailto:brian@goldeneagleorganics.com">brian@goldeneagleorganics.com</a></h4>
-            <h3 style="text-decoration: underline; color: #B88D47">Cell:</h3>
-            <h4>(541)-214-5467</h4>
-            <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/fblogo.jpg" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
-            <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/emailLogo.jpg" width="50" style="padding: 5px" title="Email GEO" /></a>
-        </div>
-    </div>
-    <div class="text-center">
-        <p style="margin-top: 100px">Website designed & built by <a href="https://www.linkedin.com/in/devin-magee-3698ba70">Devin Magee</a></p>
-    </div>
-    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 100px">
-        <a href="index.html">
-            <img src="GEOPics/GEOCrest.png" width="80" style="padding-top: 10px" />
-        </a>
-        <h2 style="font-family:'Times New Roman', Times, serif; color: white; font-weight: 700; display: inline; vertical-align: middle; margin-left: 15px; margin-right: 25px">GOLDEN EAGLE ORGANICS, INC.</h2>
-        <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/facebook-square.png" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
-        <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/mail.png" width="50" style="padding: 5px" title="Email GEO" /></a>
     </footer>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
