--- a/GoldenEagleOrganics/goat.html
+++ b/GoldenEagleOrganics/goat.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Horse Care And Boarding">
+    <meta name="description" content="Golden Eagle Organics">
     <meta name="keywords" content="Golden, Eagle, Organics, Meats">
     <meta name="author" content="Devin Magee">
     <meta http-equiv="last-modified" content="2016-06-22@11:00:00 PST" />
