Finished converting to Bootstrap Casual Format
moo

--- a/GoldenEagleOrganics/about.html
+++ b/GoldenEagleOrganics/about.html
@@ -1,44 +1,43 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>About - Business Casual - Start Bootstrap Theme</title>
-
-    <!-- Bootstrap Core CSS -->
+    <meta name="description" content="Golden Eagle Organics">
+    <meta name="keywords" content="Golden, Eagle, Organics, Meats">
+    <meta name="author" content="Devin Magee">
+    <title>Golden Eagle Organics, Inc.</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
     <link href="css/business-casual.css" rel="stylesheet">
-
-    <!-- Fonts -->
+    <link href="siteCss/Hover/hover-min.css" rel="stylesheet">
+    <link href="siteCss/addedStyle.css" rel="stylesheet">
+    <link rel="icon" href="GEOPics/GEOItab.ico">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
-
 <body>
-
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
-
-    <!-- Navigation -->
+    <div class="brand" style="font-family: 'Times New Roman', Times, serif;">
+        <a href="index.html">
+            <img src="GEOPics/GEOCrest.png" width="100" />
+        </a>
+        GOLDEN EAGLE ORGANICS, INC.
+    </div>
+    <div class="address-bar">
+        <a href="http://www.usda.gov/wps/portal/usda/usdahome?contentidonly=true&contentid=organic-agriculture.html"><img src="GEOPics/usdaorg.png" height="50" class="hvr-pop" /></a>
+        <a href="https://tilth.org/"><img src="GEOPics/oretil.png" height="50" class="hvr-pop" /></a>
+        62900 Eagle Rd. | Bend, OR 97701 | (541)-214-5467
+        <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/facebook-square.png" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
+        <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/mail.png" width="50" style="padding: 5px" title="Email GEO" /></a>
+    </div>
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -46,104 +45,167 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html" style="font-family: 'Times New Roman', Times, serif; color: white !important">
+                    <img src="GEOPics/GEOCrest.png" width="25" style="float: left; margin-right: 10px" />
+                    Golden Eagle Organics
+                </a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
+                    <li class="hvr-bounce-out">
                         <a href="index.html">Home</a>
                     </li>
-                    <li>
+                    <li class="hvr-bounce-out" style="z-index: 2">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="">
+                            Products
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="beef.html">- Beef -</a></li>
+                            <li><a href="lamb.html">- Lamb -</a></li>
+                            <li><a href="goat.html">- Goat -</a></li>
+                            <li><a href="hay.html">- Hay -</a></li>
+                            <li><a href="alfalfa.html">- Alfalfa -</a></li>
+                            <li><a href="farming.html">- Custom Farming -</a></li>
+                        </ul>
+                    </li>
+                    <li class="hvr-bounce-out">
                         <a href="about.html">About</a>
                     </li>
-                    <li>
-                        <a href="blog.html">Blog</a>
-                    </li>
-                    <li>
+                    <li class="hvr-bounce-out">
                         <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
-
     <div class="container">
-
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">About
-                        <strong>business casual</strong>
+                    <h2 class="intro-text text-center">
+                        About
+                        <strong>Golden Eagle Organics, Inc.</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
+                    <img class="img-responsive img-border-left" src="GEOPics/owners01.jpg" alt="Picture of the GEO Owners">
                 </div>
                 <div class="col-md-6">
-                    <p>This is a great place to introduce your company or project and describe what you do.</p>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>
+                        The Lepore Family (Brian, Emily, Gus, Claudia and Bodhi the dog) migrated to Central Oregon from East-Central Indiana in 2012.
+                        Brian spent the previous decade researching and teaching agricultural and environmental soil sciences and agroecology.  During
+                        that time, he worked with many farmers in their fields and fell in love with farming. But, academia and farming, done right, are
+                        both jobs that require total focus.  So, in 2012, Brian quit his job at Ball State University with the hope of starting a farm.
+                        Emily found a job as a speech and language pathologist at St. Charles Hospital in Bend and Brian started looking for land to farm.
+                        In 2014, they found two properties: a somewhat neglected 77-acre hay farm about 25 miles north of Bend right on Highway 97 and
+                        a house with a few acres of pasture just outside Bend.  The Lepores live in the Bend house and commute to the Culver property
+                        (so that Emily can get to her hospital job) and get help on the farm and with kid duties from Brian’s family (Vince (“Grand Pops”),
+                        Gisela (“Omi”) and Bruce, Yuki and Louie (Brian’s brother’s family)) who followed them to Central Oregon.  With Brian’s family all
+                        here (they’re not “all there”) and much of Emily’s family on the west coast, Central Oregon was the perfect place to start their
+                        new farming adventure.
+                    </p>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
-
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Our
+                    <h2 class="intro-text text-center">
+                        Our
                         <strong>Team</strong>
                     </h2>
                     <hr>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
+                <div class="row">
+                    <div class="col-sm-4 text-center">
+                        <img class="img-responsive" src="GEOPics/brian01.jpg" alt="">
+                        <h3>
+                            Brian Lepore
+                        </h3>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <img class="img-responsive" src="GEOPics/emily01.jpg" alt="">
+                        <h3>
+                            Emily Lepore
+                        </h3>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <img class="img-responsive" src="GEOPics/vince01.jpg" alt="">
+                        <h3>
+                            Vince Lepore
+                        </h3>
+                    </div>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
+                <div class="row">
+                    <div class="col-sm-4 text-center">
+                        <img class="img-responsive" src="GEOPics/nick01.jpg" alt="">
+                        <h3>
+                            Nick Covey
+                        </h3>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                        <h3>
+                            Justin Dunham
+                        </h3>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                        <h3>
+                            Brian Adams
+                        </h3>
+                    </div>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
+                <div class="row">
+                    <div class="col-sm-4 text-center">
+                        <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                        <h3>
+                            Ryan Moore
+                        </h3>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <img class="img-responsive" src="GEOPics/gus01.jpg" alt="">
+                        <h3>
+                            Gus Lepore
+                        </h3>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <img class="img-responsive" src="GEOPics/claudia01.jpg" alt="">
+                        <h3>
+                            Claudia Lepore
+                        </h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4"></div>
+                    <div class="col-sm-4 text-center">
+                        <img class="img-responsive" src="GEOPics/bodhi01.jpg" alt="">
+                        <h3>
+                            Bodhi Lepore
+                        </h3>
+                    </div>
+                    <div class="col-sm-4"></div>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
-
     </div>
-    <!-- /.container -->
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-        </div>
+    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 200px">
+        <a href="index.html">
+            <img src="GEOPics/GEOCrest.png" width="80" style="padding-top: 10px" />
+        </a>
+        <h2 style="font-family:'Times New Roman', Times, serif; color: white; font-weight: 700; display: inline; vertical-align: middle; margin-left: 15px; margin-right: 25px">GOLDEN EAGLE ORGANICS, INC.</h2>
+        <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/facebook-square2.png" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
+        <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/mail2.png" width="50" style="padding: 5px" title="Email GEO" /></a>
     </footer>
 
-    <!-- jQuery -->
     <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
 </body>
-
 </html>
