--- a/GoldenEagleOrganics/index.html
+++ b/GoldenEagleOrganics/index.html
@@ -10,7 +10,6 @@
     <title>Golden Eagle Organics, Inc.</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/business-casual.css" rel="stylesheet">
-    <!--<link href="siteCss/BSOverride.css" rel="stylesheet">-->
     <link href="siteCss/Hover/hover-min.css" rel="stylesheet">
     <link href="siteCss/addedStyle.css" rel="stylesheet">
     <link rel="icon" href="GEOPics/GEOItab.ico">
@@ -53,10 +52,10 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="hvr-wobble-horizontal">
+                    <li class="hvr-bounce-out">
                         <a href="index.html">Home</a>
                     </li>
-                    <li class="hvr-wobble-horizontal dropdown" style="z-index: 2">
+                    <li class="hvr-bounce-out" style="z-index: 2">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="">
                             Products
                             <span class="caret"></span>
@@ -70,10 +69,10 @@
                             <li><a href="farming.html">- Custom Farming -</a></li>
                         </ul>
                     </li>
-                    <li class="hvr-wobble-horizontal">
+                    <li class="hvr-bounce-out">
                         <a href="about.html">About</a>
                     </li>
-                    <li class="hvr-wobble-horizontal">
+                    <li class="hvr-bounce-out">
                         <a href="contact.html">Contact</a>
                     </li>
                 </ul>
