--- a/GoldenEagleOrganics/blog.html
+++ b/GoldenEagleOrganics/blog.html
@@ -1,44 +1,43 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Blog - Business Casual - Start Bootstrap Theme</title>
-
-    <!-- Bootstrap Core CSS -->
+    <meta name="description" content="Golden Eagle Organics">
+    <meta name="keywords" content="Golden, Eagle, Organics, Meats">
+    <meta name="author" content="Devin Magee">
+    <title>Golden Eagle Organics, Inc.</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
     <link href="css/business-casual.css" rel="stylesheet">
-
-    <!-- Fonts -->
+    <link href="siteCss/Hover/hover-min.css" rel="stylesheet">
+    <link href="siteCss/addedStyle.css" rel="stylesheet">
+    <link rel="icon" href="GEOPics/GEOItab.ico">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
-
 <body>
-
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
-
-    <!-- Navigation -->
+    <div class="brand" style="font-family: 'Times New Roman', Times, serif;">
+        <a href="index.html">
+            <img src="GEOPics/GEOCrest.png" width="100" />
+        </a>
+        GOLDEN EAGLE ORGANICS, INC.
+    </div>
+    <div class="address-bar">
+        <a href="http://www.usda.gov/wps/portal/usda/usdahome?contentidonly=true&contentid=organic-agriculture.html"><img src="GEOPics/usdaorg.png" height="50" class="hvr-pop" /></a>
+        <a href="https://tilth.org/"><img src="GEOPics/oretil.png" height="50" class="hvr-pop" /></a>
+        62900 Eagle Rd. | Bend, OR 97701 | (541)-214-5467
+        <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/facebook-square.png" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
+        <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/mail.png" width="50" style="padding: 5px" title="Email GEO" /></a>
+    </div>
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -46,102 +45,115 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html" style="font-family: 'Times New Roman', Times, serif; color: white !important">
+                    <img src="GEOPics/GEOCrest.png" width="25" style="float: left; margin-right: 10px" />
+                    Golden Eagle Organics
+                </a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
+                    <li class="hvr-bounce-out">
                         <a href="index.html">Home</a>
                     </li>
-                    <li>
+                    <li class="hvr-bounce-out" style="z-index: 2">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="">
+                            Products
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="beef.html">- Beef -</a></li>
+                            <li><a href="lamb.html">- Lamb -</a></li>
+                            <li><a href="goat.html">- Goat -</a></li>
+                            <li><a href="hay.html">- Hay -</a></li>
+                            <li><a href="alfalfa.html">- Alfalfa -</a></li>
+                            <li><a href="farming.html">- Custom Farming -</a></li>
+                        </ul>
+                    </li>
+                    <li class="hvr-bounce-out">
                         <a href="about.html">About</a>
                     </li>
-                    <li>
-                        <a href="blog.html">Blog</a>
-                    </li>
-                    <li>
+                    <li class="hvr-bounce-out">
                         <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
-
     <div class="container">
-
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Company
-                        <strong>blog</strong>
+                    <h2 class="intro-text text-center">
+                        <strong>BEEF</strong>
+                        Products
                     </h2>
                     <hr>
                 </div>
-                <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-1.jpg" alt="">
-                    <h2>Post Title
-                        <br>
-                        <small>October 13, 2013</small>
-                    </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
-                    <hr>
+                <div class="col-md-8" style="margin-top: 15px; padding: 0 15px 0 0 !important">
+                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators" style="z-index: 1">
+                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                        </ol>
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img class="img-responsive pic-preview" src="GEOPics/beef01.jpg" style="width: 100%" title="" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                            </div>
+                        </div>
+                        <!-- Controls -->
+                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                        </a>
+                        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                        </a>
+                    </div>
                 </div>
-                <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-2.jpg" alt="">
-                    <h2>Post Title
-                        <br>
-                        <small>October 13, 2013</small>
-                    </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
-                    <hr>
-                </div>
-                <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-3.jpg" alt="">
-                    <h2>Post Title
-                        <br>
-                        <small>October 13, 2013</small>
-                    </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
-                    <hr>
-                </div>
-                <div class="col-lg-12 text-center">
-                    <ul class="pager">
-                        <li class="previous"><a href="#">&larr; Older</a>
-                        </li>
-                        <li class="next"><a href="#">Newer &rarr;</a>
-                        </li>
-                    </ul>
+                <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
+                    <h3 style="margin-top: 10px">GEO's Beef</h3>
+                    <p>
+                        Short beef description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
+                        eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
+                    </p>
+                    <h3>What We Do</h3>
+                    <p>
+                        Short beef description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
+                        eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
+                    </p>
+                    <br />
+                    <p>Interested in buying from GEO? Click the button below to contact us!</p>
+                    <a href="contact.html" style="color: white" class="btn btn-sm btn-warning">Contact GEO</a></a>
                 </div>
             </div>
         </div>
-
     </div>
-    <!-- /.container -->
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-        </div>
+    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 200px">
+        <a href="index.html">
+            <img src="GEOPics/GEOCrest.png" width="80" style="padding-top: 10px" />
+        </a>
+        <h2 style="font-family:'Times New Roman', Times, serif; color: white; font-weight: 700; display: inline; vertical-align: middle; margin-left: 15px; margin-right: 25px">GOLDEN EAGLE ORGANICS, INC.</h2>
+        <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/facebook-square2.png" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
+        <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/mail2.png" width="50" style="padding: 5px" title="Email GEO" /></a>
     </footer>
 
-    <!-- jQuery -->
     <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
 </body>
-
 </html>
