--- a/GoldenEagleOrganics/farming.html
+++ b/GoldenEagleOrganics/farming.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,130 +7,153 @@
     <meta name="description" content="Golden Eagle Organics">
     <meta name="keywords" content="Golden, Eagle, Organics, Meats">
     <meta name="author" content="Devin Magee">
-    <meta http-equiv="last-modified" content="2016-06-22@11:00:00 PST" />
-    <title>Golden Eagle Organics Inc.</title>
-    <link href="siteCss/bootstrap.min.css" rel="stylesheet">
-    <link href="siteCss/BSOverride.css" rel="stylesheet">
-    <link href="siteCss/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <title>Golden Eagle Organics, Inc.</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/business-casual.css" rel="stylesheet">
     <link href="siteCss/Hover/hover-min.css" rel="stylesheet">
+    <link href="siteCss/addedStyle.css" rel="stylesheet">
     <link rel="icon" href="GEOPics/GEOItab.ico">
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script>
-        $('.carousel').carousel({
-            interval: 5000
-        })
-    </script>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-    <div class="col-md-12" style="min-height:150px; background-color: #b88d47; position: fixed; z-index: 3">
+    <div class="brand" style="font-family: 'Times New Roman', Times, serif;">
+        <a href="index.html">
+            <img src="GEOPics/GEOCrest.png" width="100" />
+        </a>
+        GOLDEN EAGLE ORGANICS, INC.
+    </div>
+    <div class="address-bar">
+        <a href="http://www.usda.gov/wps/portal/usda/usdahome?contentidonly=true&contentid=organic-agriculture.html"><img src="GEOPics/usdaorg.png" height="50" class="hvr-pop" /></a>
+        <a href="https://tilth.org/"><img src="GEOPics/oretil.png" height="50" class="hvr-pop" /></a>
+        62900 Eagle Rd. | Bend, OR 97701 | (541)-214-5467
+        <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/facebook-square.png" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
+        <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/mail.png" width="50" style="padding: 5px" title="Email GEO" /></a>
+    </div>
+    <nav class="navbar navbar-default" role="navigation">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12" style="font-family:'Times New Roman', Times, serif; color: white; padding-left: 0; padding-right: 0">
-                    <a href="index.html"><img src="GEOPics/GEOI.jpg" height="130" style="margin: 10px 20px 10px 0; float: left" /></a>
-                    <p style="display:inline; float: right; font-family: Tahoma; color: white; margin-top: 7px">
-                        62900 Eagle Rd. <br />
-                        Bend, OR 97701<br />
-                        (541)-214-5467<br />
-                        <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/facebook-square.png" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
-                        <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/mail.png" width="50" style="padding: 5px" title="Email GEO" /></a>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html" style="font-family: 'Times New Roman', Times, serif; color: white !important">
+                    <img src="GEOPics/GEOCrest.png" width="25" style="float: left; margin-right: 10px" />
+                    Golden Eagle Organics
+                </a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="hvr-bounce-out">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li class="hvr-bounce-out" style="z-index: 2">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="">
+                            Products
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="beef.html">- Beef -</a></li>
+                            <li><a href="lamb.html">- Lamb -</a></li>
+                            <li><a href="goat.html">- Goat -</a></li>
+                            <li><a href="hay.html">- Hay -</a></li>
+                            <li><a href="alfalfa.html">- Alfalfa -</a></li>
+                            <li><a href="farming.html">- Custom Farming -</a></li>
+                        </ul>
+                    </li>
+                    <li class="hvr-bounce-out">
+                        <a href="about.html">About</a>
+                    </li>
+                    <li class="hvr-bounce-out">
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <strong>CUSTOM</strong>
+                        Farming
+                    </h2>
+                    <hr>
+                </div>
+                <div class="col-md-8" style="margin-top: 15px; padding: 0 15px 0 0 !important">
+                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators" style="z-index: 1">
+                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                        </ol>
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img class="img-responsive pic-preview" src="GEOPics/custFarmServ01.jpg" style="width: 100%" title="" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive pic-preview" src="GEOPics/custFarmServ02.jpg" style="width: 100%" title="" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive pic-preview" src="GEOPics/custFarmServ03.jpg" style="width: 100%" title="" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive pic-preview" src="GEOPics/custFarmServ04.jpg" style="width: 100%" title="" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive pic-preview" src="GEOPics/custFarmServ05.jpg" style="width: 100%" title="" alt="">
+                            </div>
+                        </div>
+                        <!-- Controls -->
+                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                        </a>
+                        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
+                    <h3 style="margin-top: 10px">GEO's Custom Farming</h3>
+                    <p>
+                        Short custom farming description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
+                        eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
                     </p>
-                    <a href="http://www.usda.gov/wps/portal/usda/usdahome?contentidonly=true&contentid=organic-agriculture.html"><img src="GEOPics/usdaorg.png" height="80" class="hvr-pop" style="float: right; padding: 15px 20px 0 10px" /></a>
-                    <a href="https://tilth.org/"><img src="GEOPics/oretil.png" height="80" class="hvr-pop" style="float: right; padding: 15px 10px 0 0px" /></a>
-                    <h2 style="font-weight: 700">GOLDEN EAGLE</h2>
-                    <h2 style="font-weight: 700; margin-top: 0">ORGANICS, INC.</h2>
-                    <h4 style="margin-top: 0"><em>"Central Oregon hay and organic pasture raised meats"</em></h4>
+                    <h3>What We Do</h3>
+                    <p>
+                        Short custom farming description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
+                        eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
+                    </p>
+                    <br />
+                    <p>Interested in buying from GEO? Click the button below to contact us!</p>
+                    <a href="contact.html" style="color: white" class="btn btn-sm btn-warning">Contact GEO</a></a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-md-12" style="background-color: #b88d47; position: fixed; padding-top: 150px; z-index: 2">
-        <div class="container">
-            <nav class="navbar">
-                <div class="container-fluid">
-                    <ul class="nav navbar-nav navbar-style">
-                        <li class="hvr-wobble-horizontal"><a href="index.html">Home</a></li>
-                        <li class="active hvr-wobble-horizontal dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="">
-                                Products
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu" style="text-align:center">
-                                <li><a href="beef.html">Beef</a></li>
-                                <li><a href="lamb.html">Lamb</a></li>
-                                <li><a href="goat.html">Goat</a></li>
-                                <li><a href="hay.html">Hay</a></li>
-                                <li><a href="alfalfa.html">Alfalfa</a></li>
-                                <li><a href="farming.html">Custom Farming</a></li>
-                            </ul>
-                        </li>
-                        <li class="hvr-wobble-horizontal"><a href="about.html">About</a></li>
-                        <li class="hvr-wobble-horizontal"><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </div>
-    <div class="container" style="padding: 190px 0 0 0 !important">
-        <div class="col-md-8" style="margin-top: 15px; padding: 0 15px 0 0 !important">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators" style="z-index: 1">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-                </ol>
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img class="img-responsive pic-preview" src="GEOPics/custFarmServ01.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/custFarmServ02.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/custFarmServ03.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/custFarmServ04.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/custFarmServ05.jpg" style="width: 100%" title="" alt="">
-                    </div>
-                </div>
-                <!-- Controls -->
-                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <!--<span class="glyphicon glyphicon-chevron-left"></span>-->
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                    <!--<span class="glyphicon glyphicon-chevron-right"></span>-->
-                </a>
-            </div>
-        </div>
-        <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
-            <h3 style="margin-top: 10px">GEO's Custom Farming Services</h3>
-            <p>
-                Short farming services description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
-            </p>
-            <h3>What We Do</h3>            <p>
-                Short farming services description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
-            </p>
-            <br />
-            <p>Interested in buying from GEO? Click the button below to contact us!</p>
-            <a href="contact.html" style="color: white" class="btn btn-sm btn-warning">Contact GEO</a></a>
-        </div>
-    </div>
-    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 250px">
+
+    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 200px">
         <a href="index.html">
             <img src="GEOPics/GEOCrest.png" width="80" style="padding-top: 10px" />
         </a>
         <h2 style="font-family:'Times New Roman', Times, serif; color: white; font-weight: 700; display: inline; vertical-align: middle; margin-left: 15px; margin-right: 25px">GOLDEN EAGLE ORGANICS, INC.</h2>
-        <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/facebook-square.png" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
-        <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/mail.png" width="50" style="padding: 5px" title="Email GEO" /></a>
+        <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/facebook-square2.png" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
+        <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/mail2.png" width="50" style="padding: 5px" title="Email GEO" /></a>
     </footer>
+
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
