Slight touch ups
moo

--- a/GoldenEagleOrganics/about.html
+++ b/GoldenEagleOrganics/about.html
@@ -186,7 +186,7 @@
                     <div class="col-sm-4 text-center">
                         <img class="img-responsive" src="GEOPics/bodhi01.jpg" alt="">
                         <h3>
-                            Bodhi Lepore
+                            Bodhi The Dog
                         </h3>
                     </div>
                     <div class="col-sm-4"></div>
