--- a/GoldenEagleOrganics/index.html
+++ b/GoldenEagleOrganics/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container" style="background-color: white !important; padding-bottom: 30px">
         <div class="row">
             <div class="box">
                 <div class="col-lg-8 text-center">
@@ -139,7 +139,14 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12" style="margin-top: 15px; padding: 0; border-top: 1px solid #B88D47">
-            <h2 style="text-align:center; color: #404040; font-family: 'Times New Roman'; margin-bottom: 20px">- Products & Services GEO Offers -</h2>
+            <div class="col-lg-12">
+                <hr>
+                <h2 class="intro-text text-center">
+                    <strong>Products & Services</strong>
+                    GEO Offers
+                </h2>
+                <hr>
+            </div>
             <div class="col-md-4">
                 <div class="product-overlay">
                     <a href="beef.html">
