Added my Signature :D
moo

--- a/GoldenEagleOrganics/contact.html
+++ b/GoldenEagleOrganics/contact.html
@@ -151,8 +151,11 @@
             </div>
         </div>
     </div>
+    <div class="text-center">
+        <p style="margin-top: 100px">Website designed & built by <a href="https://www.linkedin.com/in/devin-magee-3698ba70" style="color: #B88D47">Devin Magee</a></p>
+    </div>
 
-    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 200px">
+    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 100px">
         <a href="index.html">
             <img src="GEOPics/GEOCrest.png" width="80" style="padding-top: 10px" />
         </a>
